# onebox-integrations-hub

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
06-handoffs/: 2026-03-09_architect_to_backend.md  2026-03-09_backend_to_core.md  2026-03-09_backend_to_devops.md  2026-03-09_core_to_integrations.md  2026-03-10_epic4_complete.md  2026-03-11_baf_adapter_db_integration.md  2026-03-11_database_implementation.md  2026-03-11_final_sync_logic.md  2026-03-11_infrastructure_update_postgresql.md  2026-03-11_onebox_sync_worker_client.md  2026-03-12_baf_polling_implementation.md  2026-03-12_etl_implementation_final.md  2026-03-12_etl_layer_dwh_structure.md  2026-03-13_catalog_attributes_plan.md  HANDOFF-2026-03-13.md  HANDOFF-2026-03-14_FINAL.md  HANDOFF-2026-03-14_PLAN.md  HANDOFF-2026-03-21.md
config/: roles.yml  routing_rules.yaml
config/mappings/: 1c_receipt_to_onebox_deal.yaml  onebox_deal_to_telegram.yaml
docker/: Dockerfile  docker-compose.yml
docs/: 1C_INTEGRATION_SPEC.md  1C_POLLING_SPEC.md  BACKLOG_V1.md  DECISIONS.md  INTEGRATION_MAP.md  PRODUCT_CATALOG_SPEC.md  TASK.md
docs/00-brief/: PROJECT_BRIEF.md  TASK.md
docs/01-architecture/: 1C_POLLING_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  BACKFILL_RETURNS_SPEC.md  COMPONENTS.md  DB_SCHEMA.md  (+4 more)
scratch/: bra_report.py  bra_report_v2.py  bra_sales_report_attributes.csv  bra_sales_report_march.csv  bra_sales_report_v2.csv  check_sizes.py  debug_colors.py  debug_staging.py  final_api_test.py  stock_sales_check.py  test_rq.py
src/: main.py
tests/: test_telegram.py  test_webhook.py
(+45 files in other folders)
