[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onebox-integrations-hub"
version = "0.1.0"
description = "Centralized integration bus between CRM OneBox and external services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "rq>=1.16.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "aiogram>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
